增加据点税收

--- a/doc/功能列表.md
+++ b/doc/功能列表.md
@@ -19,6 +19,7 @@
 8.村庄成长，一个村庄的大小可以有繁荣度决定，如果繁荣度比较高，就可以升级成城堡，城堡可以升级成城镇。反之会下降。直到被破坏，变成废墟和被夷为平地
 
 9.村民人数，村民队伍会根据繁荣度来结伴同行，繁荣度越高，人数就越多
+10.村庄招募，除正常兵种外，可以少量高级兵种
 
 ## 城镇和城堡功能
 
@@ -81,6 +82,7 @@
 11.教练功能，定时给部队提供大量经验，和自动升级士兵（需要玩家配置升级路线）
 
 12.财务功能，保存玩家金钱，战斗失败后不丢失金钱，或极少几率丢失
+13.队伍合并，相同阵营的兵数较少时可以自动合并。
 
 ## 人物功能
 
