--- a/doc/功能列表.md
+++ b/doc/功能列表.md
@@ -1,6 +1,8 @@
 # 功能列表
 
-## 村庄新功能
+## 繁荣帝国
+
+### 村庄新功能
 
 1.种植系统，可以和村长购买相应数量的土地，对相应的土地进行播种（小麦，橄榄，枣，葱，姜，蒜，麻），经过一段时间后可以进行收获。收获后可以贩卖到各个市场。
 
@@ -21,17 +23,17 @@
 9.村民人数，村民队伍会根据繁荣度来结伴同行，繁荣度越高，人数就越多
 10.村庄招募，除正常兵种外，可以少量高级兵种
 
-## 城镇和城堡功能
+### 城镇和城堡功能
 
 1.城镇招兵，在城镇里面可以招募士兵，比村庄招募的士兵级别和价格都高一些
 
-## 战场功能
+### 战场功能
 
 1.阵型系统，古代八大阵型
 
 2.补给系统，远程士兵可以根据情况重新装满箭矢和投掷武器
 
-## 队伍系统
+### 队伍系统
 
 1.分队系统
 
@@ -84,7 +86,7 @@
 12.财务功能，保存玩家金钱，战斗失败后不丢失金钱，或极少几率丢失
 13.队伍合并，相同阵营的兵数较少时可以自动合并。
 
-## 人物功能
+### 人物功能
 
 1.家族树，将家族以树形进行组织
 
@@ -168,7 +170,7 @@
 
 22.叛变功能，领主的叛变系统本来就有了，对于非领主人物，他们有机会从领主叛变到玩家，也有机会从玩家叛变到领主，人物叛变的几率取决于人物性格，玩家关系，领主关系。
 
-## 外交功能
+### 外交功能
 
 1.附庸功能，弱小的国家可以成为实力强大国家的小弟，主国对其他国家开战时，附庸国家也会进入开战状态，反之，则不开战，附庸可以请求主国开战，定时向主国进行纳贡（主国可以要求进贡御品）。附庸国家也可以选择脱离主国独立，或者转投其他国家。
 
@@ -185,3 +187,8 @@
 3.4 索要资源，减少关系，可以得到金钱，土地
 
 3.5 请求救援，拉其他国家共同对抗敌人
+
+
+## machaofang 功能
+【士兵提拔】这个其实汉匈决战已经实现了，就是设置一个机制，某个士兵在一场战斗中杀敌或伤敌多少（如5个），战斗结束后触发士兵变为npc（也就是将军）的功能
+【随从带兵】可以参考耶路撒冷的“十字军老队长”，设置某个兵种名为“校尉”、“裨将”可以自己带兵，设置这一兵种带兵上限（如50），并且可以并入玩家队伍（大地图上是一个队伍但实际上是不同编制，参考汉匈的私兵和属兵），为这样玩家在征战过程中不用为统领士兵的上限而烦恼。（如原来玩家对战时军队数量为自己所带兵数量，增加之后为本部兵+领兵者数量×50）
